--- a/NPGeek.Web/Views/Home/Index.cshtml
+++ b/NPGeek.Web/Views/Home/Index.cshtml
@@ -1,18 +1,24 @@
-﻿
+﻿@model List<NPGeek.Web.Models.Park>
+
 @{
     Layout = "~/Views/Shared/_LayoutPage.cshtml";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Home</title>
-</head>
-<body>
 
-    <div> 
-    </div>
-</body>
-</html>
+
+<title>Home</title>
+
+<div>
+
+    @foreach (var park in Model)
+    {
+        <div class="park">
+            <img src="~/Content/parks/@(park.ParkCode).jpg" />
+            <a href="@Url.Action("Detail","Park", new { parkCode = park.ParkCode })">@park.Name</a>
+            <h4>@park.State</h4>
+            <p>@park.ParkDescription</p>
+        </div>
+    }
+
+</div>
