--- a/NPGeek.Web/Views/Park/Detail.cshtml
+++ b/NPGeek.Web/Views/Park/Detail.cshtml
@@ -14,9 +14,9 @@
         <span>Founded in @Model.YearFounded</span>
     </div>
     <div class="park-stats">
-        <span>Acreage: @Model.Acreage</span>
-        <span>Elevation: @Model.Elevation</span>
-        <span>Miles of Trail: @Model.MilesOfTrail</span>
+        <span>Acreage: @Model.Acreage miles</span>
+        <span>Elevation: @Model.Elevation ft</span>
+        <span>Miles of Trail: @Model.MilesOfTrail miles</span>
         <span>No. of Campsites: @Model.NumberOfCampsites</span>
         <span>Climate: @Model.Climate</span>
         <span>Annual Visitor Count: @Model.AnnualVisitorCount</span>
