--- a/NPGeek.Web/Views/Survey/Survey.cshtml
+++ b/NPGeek.Web/Views/Survey/Survey.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@model  NPGeek.Web.Models.Survey
+
+
+
 @{
     ViewBag.Title = "Survey";
     Layout = "~/Views/Shared/_LayoutPage.cshtml";
@@ -6,8 +9,8 @@
 
 <h2>Survey</h2>
 
-<form method="post" action="@Url.Action("SurveyResults", "Survey")">
-
+<form method="post" action="@Url.Action("Survey", "Survey" )">
+    What is your favorite park?
     <select name="ParkCode">
         <option value="CVNP">Cuyahoga Valley National Park</option>
         <option value="ENP">Everglades National Park</option>
@@ -26,9 +29,11 @@
     <input type="text" name="State" />
     Activity Level
     <select name="ActivityLevel">
-        <option value="High">High</option>
-        <option value="Medium">Medium</option>
-        <option value="Low">Low</option>
-
+        <option value="ExtremelyActive">Extremely Active</option>
+        <option value="Sedentary">Sedentary</option>
+        <option value="Inactive">Inactive</option>
     </select>
+
+    <button> Submit</button>
+
 </form>
