--- a/NPGeek.Web/Views/Survey/SurveyResult.cshtml
+++ b/NPGeek.Web/Views/Survey/SurveyResult.cshtml
@@ -1,11 +1,24 @@
-﻿
+﻿@model List<NPGeek.Web.Models.SurveyResult>
 
 @{
     ViewBag.Title = "Survey";
     Layout = "~/Views/Shared/_LayoutPage.cshtml";
 }
 
-<h2>Survey</h2>
+<h2>Survey Results</h2>
 
 @* list must include name, count of surveys*@
 @* only show parks with survey > 1 *@
+
+<div class="survey-results">
+
+    @foreach(var survey in Model)
+    {
+        <div class="survey-result">
+            <img class="survey-img" src="~/Content/parks/@(survey.ParkCode.ToLower()).jpg" />
+            <h2>@survey.ParkName</h2>
+            <span>@survey.SurveyCount</span>
+        </div>
+    }
+
+</div>
