--- a/NPGeek.Web/Views/Shared/_LayoutPage.cshtml
+++ b/NPGeek.Web/Views/Shared/_LayoutPage.cshtml
@@ -5,27 +5,16 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="~/Content/Styles.css" />
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
-    <header>
-        <img id="logo" src="~/Content/logo.png" />
-    </header>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                @Html.ActionLink("Survey", "Index", "Survey", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav"></ul>
-            </div>
-        </div>
+<body id="body-background">
+    <div id="nav-bar">
+        <a id="logo" href="@Url.Action("Index","Home")"><img src="~/Content/logo.png" /></a>
+        <div class="nav-icon">@Html.ActionLink("HOME", "Index", "Home")</div>
+        <div class="nav-icon"> @Html.ActionLink("SURVEY", "Survey", "Survey")</div>
     </div>
+               
+
     <div>
         @RenderBody()
     </div>
