--- a/NPGeek.Web/Views/Home/Index.cshtml
+++ b/NPGeek.Web/Views/Home/Index.cshtml
@@ -9,16 +9,25 @@
 
 <title>Home</title>
 
-<div>
+<div class="home">
 
     @foreach (var park in Model)
     {
         <div class="park">
             <img src="~/Content/parks/@(park.ParkCode).jpg" />
-            <a href="@Url.Action("Detail","Park", new { parkCode = park.ParkCode })">@park.Name</a>
-            <h4>@park.State</h4>
-            <p>@park.ParkDescription</p>
+            <div class="park-intro">
+                <div class="park-head">
+                    <a class="name" href="@Url.Action("Detail","Park", new { parkCode = park.ParkCode })">@park.Name</a>
+
+                    <h4 class="state">(@park.State)</h4>
+                </div>
+                <p>@park.ParkDescription</p>
+            </div>
         </div>
     }
+
+
+            <div id="waterfall"></div>
+
 
 </div>
