--- a/NPGeek.Web/Content/Styles.css
+++ b/NPGeek.Web/Content/Styles.css
@@ -108,23 +108,58 @@ div.park-stats {
 
 /* weather */
 
+
+div.descriptionWrapper {
+    background-color: white;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
+}
+
+
 div.weather {
+    margin-top: 40px;
+    max-width: 700px;
     display: grid;
     grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
 }
 
+img.parkPic {
+    grid-area: 1 / 1 / 3 / 2;
+    width: 80%;
+    margin: auto;
+}
+
+div.detail-header {
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+div.park-stats {
+    margin-top: 30px;
+    grid-area: 2 / 2 / 3 / 3;
+    background-color:lightgreen;
+}
+
+div.park-description{
+    margin-top:30px;
+}
+
+
 div.todays-weather {
+    background-color: lightblue;
     padding: 10px;
     width: 150px;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 40% repeat(3, 20%);
-    border: 4px outset forestgreen;
+    border: 3px outset #30c634;
 }
 
 #weather-img {
     grid-area: 1 / 1 / 2 / 3;
     width: 100%;
+    border-radius: 10px;
+    border-color: black;
 }
 
 span.message {
@@ -132,11 +167,14 @@ span.message {
 }
 
 div.week-weather {
+    background-color: lightcyan;
     font-family: sans-serif;
+    border-radius: 10px;
+    border-color: black;
     padding: 10px;
-    height: 150px;
+    height: 180px;
     width: 125px;
-    border: 4px outset forestgreen;
+    border: 2px outset #30c634;
 }
 
 #weather-week-img {
