--- a/NPGeek.Web/Views/Shared/_LayoutPage.cshtml
+++ b/NPGeek.Web/Views/Shared/_LayoutPage.cshtml
@@ -12,6 +12,7 @@
         <a id="logo" href="@Url.Action("Index","Home")"><img src="~/Content/logo.png" /></a>
         <div class="nav-icon">@Html.ActionLink("HOME", "Index", "Home")</div>
         <div class="nav-icon"> @Html.ActionLink("SURVEY", "Survey", "Survey")</div>
+        <div class="nav-icon"> @Html.ActionLink("BEST PARKS", "SurveyResult", "Survey")</div>
     </div>
                
 
