--- a/NPGeek.Web/Content/Styles.css
+++ b/NPGeek.Web/Content/Styles.css
@@ -2,8 +2,10 @@
 
 #nav-bar {
     height: 100px;
+    min-width: 700px;
     position: sticky;
     background-color: #2b2b2b;
+    box-shadow: inset 0 0 20px black;
 }
 
 a#logo img {
@@ -11,7 +13,7 @@ a#logo img {
 }
 
 #body-background {
-    background-color: #5e3d14;
+    background-image: url("camo.jpg");
 }
 
 .nav-icon {
@@ -22,7 +24,12 @@ a#logo img {
 
     .nav-icon a {
         color: #30c634;
+        font-weight: 700;
     }
+
+        .nav-icon a:hover {
+            color: #30c634;
+        }
 
 /* home page */
 div.home {
@@ -37,6 +44,7 @@ div.home {
     grid-area: 1 / 2 / 10 / 3;
     position: sticky;
     background-image: url("waterfall.JPG");
+    margin-top: 20px;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: top right;
@@ -123,10 +131,11 @@ div.descriptionWrapper {
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
     background-color: #5e3d14;
-    
+    background-image: url("camo.jpg");
 }
 
 div.park-detail {
+    background-color: #272727;
     background-image: url("camo.jpg");
 }
 
@@ -149,23 +158,45 @@ img.parkPic {
 div.detail-header {
     color: white;
     grid-area: 1 / 2 / 2 / 3;
-    background-color: #5e3d14;
     max-width: 500px;
     border-radius: 5px;
 }
 
-div.park-stats {
-    margin-top: 30px;
+div.park-title {
+    background-color: #272727;
     padding: 10px;
+    border-radius: 0 0 5px 5px;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.86);
+}
+
+h2.park-name {
+    display: inline-block;
+    border-radius: 5px;
+    
+}
+
+.park-state {
+    font-size: 20px;
+}
+
+span.year {
+    text-align: center;
+    font-size: 20px;
+}
+
+div.park-stats {
+    margin: 20px;
+    padding: 10px;
+    max-width: 460px;
     grid-area: 2 / 2 / 3 / 3;
-    background-color: lightgreen;
+    background-color: #2b2b2b;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.86);
 }
 
 div.park-description {
-    margin-top: 30px;
-    background-color: #b79662;
+    margin: 20px;
+    background-color: #272727;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.86);
@@ -176,50 +207,50 @@ div.weather {
     padding: 30px;
     min-width: 800px;
     margin: auto;
-    background-color: rgba(48, 198, 52, 0.52);
     border-radius: 10px;
 }
 
 div.todays-weather {
-    background-color: lightblue;
+    background-color: #272727;
+    color: white;
+    text-align: center;
     padding: 10px;
     width: 150px;
+    min-height: 200px;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 40% repeat(3, 20%);
     border-radius: 10px;
-    border: 4px solid white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.85);
+    box-shadow: inset 0 0 20px black;
 }
 
 #weather-img {
     grid-area: 1 / 1 / 2 / 3;
     width: 100%;
-    border-radius: 10px;
-    border-color: black;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.85);
+    border-radius: 100%;
+    box-shadow: 0 0 10px black;
 }
 
 span.message {
-    padding: 10px;
     grid-area: 3 / 1 / 5 / 3;
 }
 
 div.week-weather {
-    background-color: lightcyan;
+    background-color: #272727;
+    color: white;
+    text-align: center;
     font-family: sans-serif;
     border-radius: 10px;
     border-color: black;
     padding: 10px;
     height: 180px;
     width: 125px;
-    border: 4px solid white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.85);
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.85);
 }
 
 #weather-week-img {
     width: 100px;
-    border-radius: 10px;
+    border-radius: 100%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.85);
 }
 
@@ -229,16 +260,65 @@ div.week-weather {
     background-color: white;
     padding: 10px;
     border-radius: 5px;
-    background-color: rgba(48, 198, 52, 0.70);
+    background-color: #575757;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.85);
+}
+
+.weather button {
+    color: white;
+    background-color: #272727;
+    border: 2px solid white;
+    border-radius: 5px;
+    margin: 5px;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.85);
 }
 
 
-/*survey*/
+/* survey */
+
+div main.survey-page {
+    display: inline-block;
+    position: relative;
+    padding: 10px;
+    margin-left: 100px;
+    margin-top: 100px;
+    color: white;
+    background-color: #272727;
+    border-radius: 5px;
+    vertical-align: middle;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.85);
+}
+
+.survey-page form {
+    font-size: 24px;
+    padding: 10px;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 50% 50%;
+}
+
+.survey-page input, .survey-page select {
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.85);
+}
+
+.survey-page button {
+    display: inline;
+    margin: auto;
+    color: white;
+    background-color: #272727;
+    border: 2px solid white;
+    border-radius: 5px;
+    margin: 5px;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.85);
+}
+
+/*survey results*/
 
 .survey-results {
 margin-top: 20px;
     display: grid;
-    grid-template-columns: 40% 40% 20%;
+    grid-template-columns: 20% 60% 20%;
     color: white;
 }
 
@@ -251,13 +331,24 @@ img.survey-img {
 
 div.survey-results h2 {
     margin: auto;
-    font-size: 20px;
+    font-size: 28px;
+    padding: 30px;
+    min-width: 500px;
+    text-align: center;
     color: white;
     grid-area: 1 / 2 / 2 / 3;
+    background-color: #272727;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.85);
 }
 
-div.survey-results span{
+div.survey-results span {
     margin: auto;
+    padding: 20px;
+    font-size: 36px;
+    background-color: #272727;
+    border-radius: 5px;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.85);
 }
 
 h4 {
@@ -267,7 +358,7 @@ h4 {
 }
 
 div.surveyWrapper{
-    max-width:800px;
+    max-width:1100px;
     margin: auto;
 
 }
